--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "prebuild": "rimraf dist",
     "build": "tsc --module commonjs && rollup -c rollup.config.ts && typedoc --out docs --target es6 --theme minimal --mode file src",
     "start": "rollup -c rollup.config.ts -w",
-    "test": "jest --coverage --collectCoverageFrom=!src/bayes-on-the-rock.ts",
-    "test:watch": "jest --coverage --watch",
+    "test": "jest --coverage --collectCoverageFrom=src/**/*.{js,ts} --collectCoverageFrom=!src/bayes-on-the-rock.ts",
+    "test:watch": "npm run test -- --watch",
     "test:prod": "npm run lint && npm run test -- --no-cache",
     "deploy-docs": "ts-node tools/gh-pages-publish",
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
