--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bayes-on-the-rock",
   "version": "0.1.0",
-  "description": "Manipulate Bayes Theorem with a simple calculator",
+  "description": "Chill out, it's only probabilities !",
   "keywords": [
     "Bayes",
     "Learning"
