--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "scripts": {
     "lint": "tslint  --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
+    "prettier": "prettier **/*.ts --write",
     "prebuild": "rimraf dist",
     "build": "tsc --module commonjs && rollup -c rollup.config.ts && typedoc --out docs --target es6 --theme minimal --mode file src",
     "start": "rollup -c rollup.config.ts -w",
@@ -77,7 +78,7 @@
   },
   "prettier": {
     "semi": false,
-    "singleQuote": true
+    "printWidth": 80
   },
   "commitlint": {
     "extends": [
