--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     "lint": "tslint  --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "prettier": "prettier **/*.ts --write",
     "prebuild": "rimraf dist",
-    "build": "tsc --module commonjs && rollup -c rollup.config.ts && typedoc --out docs --target es6 --theme minimal --mode file src",
+    "build": "tsc --module commonjs && rollup -c rollup.config.ts && npm run docs:build",
     "start": "rollup -c rollup.config.ts -w",
     "test": "jest --coverage --collectCoverageFrom=src/**/*.{js,ts} --collectCoverageFrom=!src/bayes-on-the-rock.ts",
     "test:watch": "npm run test -- --watch",
     "test:prod": "npm run lint && npm run test -- --no-cache",
-    "deploy-docs": "ts-node tools/gh-pages-publish",
+    "docs:build": "typedoc --out docs --target es6 --theme minimal --mode file src",
+    "docs:deploy": "ts-node tools/gh-pages-publish",
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
     "commit": "git-cz",
     "semantic-release": "semantic-release",
