--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     "emitDecoratorMetadata": true,
     "declarationDir": "dist/types",
     "outDir": "dist/lib",
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
     "typeRoots": [
       "node_modules/@types"
     ]
