--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Raphael P <raphael@imagine-app.fr>",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git@github.com:raphaelpra/bayes-on-the-rock.git"
   },
   "license": "MIT",
   "engines": {
@@ -87,40 +87,40 @@
     ]
   },
   "devDependencies": {
-    "@commitlint/cli": "^7.1.2",
-    "@commitlint/config-conventional": "^7.1.2",
-    "@types/jest": "^23.3.2",
-    "@types/node": "^10.11.0",
-    "colors": "^1.3.2",
-    "commitizen": "^3.0.0",
+    "@commitlint/cli": "^7.5.2",
+    "@commitlint/config-conventional": "^7.5.0",
+    "@types/jest": "^24.0.5",
+    "@types/node": "^11.9.4",
+    "colors": "^1.3.3",
+    "commitizen": "^3.0.5",
     "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^2.1.0",
-    "husky": "^1.0.1",
-    "jest": "^23.6.0",
-    "jest-config": "^23.6.0",
-    "lint-staged": "^8.0.0",
+    "husky": "^1.3.1",
+    "jest": "^24.1.0",
+    "jest-config": "^24.1.0",
+    "lint-staged": "^8.1.4",
     "lodash.camelcase": "^4.3.0",
-    "prettier": "^1.14.3",
+    "prettier": "^1.16.4",
     "prompt": "^1.0.0",
-    "replace-in-file": "^3.4.2",
-    "rimraf": "^2.6.2",
+    "replace-in-file": "^3.4.3",
+    "rimraf": "^2.6.3",
     "rollup": "^0.67.0",
-    "rollup-plugin-commonjs": "^9.1.8",
+    "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-json": "^3.1.0",
-    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.18.0",
-    "semantic-release": "^15.9.16",
+    "rollup-plugin-typescript2": "^0.19.2",
+    "semantic-release": "^15.13.3",
     "shelljs": "^0.8.3",
-    "travis-deploy-once": "^5.0.9",
-    "ts-jest": "^23.10.2",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
+    "travis-deploy-once": "^5.0.11",
+    "ts-jest": "^23.10.5",
+    "ts-node": "^8.0.2",
+    "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
-    "typedoc": "^0.12.0",
-    "typescript": "^3.0.3"
+    "typedoc": "^0.14.2",
+    "typescript": "^3.3.3"
   },
   "dependencies": {
     "lodash": "^4.17.11"
