Improve example launcher

--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "jest-config": "^24.1.0",
     "lint-staged": "^8.1.4",
     "lodash.camelcase": "^4.3.0",
+    "press-any-key": "^0.1.1",
     "prettier": "^1.16.4",
     "prompt": "^1.0.0",
     "replace-in-file": "^3.4.3",
